<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoMATE Client</string>
    <string name="action_settings">Settings</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_Title">Sign In to autoMATE!</string>
    <string name="auth_signing_in">Signing in…</string>
    <string name="auth_title_failed">Authentication Failed</string>
    <string name="auth_failed">Could not sign in.</string>
    <string name="button_register">Register</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_createNewAccount">Create New Account</string>
    <string name="button_look_for_nodes">Scan for nearby devices</string>
    <string name="button_commands">Commands</string>
    <string name="button_status">Status</string>
    <string name="prefs_credentials">com.automate.client.CredentialsPreferences</string>
    <string name="prefs_credentials_username">com.automate.client.CredentialsPreferences.username</string>
    <string name="prefs_credentials_password">com.automate.client.CredentialsPreferences.password</string>
    <string name="reg_title">Create a New Account!</string>
    <string name="reg_email">Email Address</string>
    <string name="reg_name">Name</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_registering">Creating new account…</string>
    <string name="reg_title_failed">Registration Failed</string>
    <string name="reg_failed">Unable to create account.</string>
    <string name="node_list_no_nodes">You don\'t have any devices!</string>
    <string name="node_list_disconnected">You are not connected.</string>
    <string name="node_list_downloading">Downloading node list…</string>
    <string name="node_list_connecting">Connecting…</string>
    <string name="command_confirm_title">Confirm Command Selection</string>
    <string name="command_confirm_message">Send %1$s command?</string>
    <string name="command_set_arg_title">Set Argument Value</string>
    <string name="command_set_arg_message">Enter value for %1$s.</string>
	<string name="command_set_arg_int_range">(%1$d)…(%2$d)</string>
	<string name="command_set_arg_real_range">(%1$f)…(%2$f)</string>
	<string name="command_lost_title">Command Lost</string>
	<string name="command_lost_message">A recent %1$s command was never received.</string>
	<string name="command_invalid_id_message">The device is not registered.</string> 
	<string name="command_server_error_message">Internal server error.</string> 
	<string name="command_node_not_owned_message">The device does not belong to you.</string> 
	<string name="command_node_offline_message">The device is offline.</string> 
	<string name="command_duplicate_id_message">The application sent a duplicate command id.</string> 
	<string name="command_invalid_args_message">The command arguments were invalid.</string> 
	<string name="command_invalid_command_message">The command sent was not valid.</string> 
	<string name="command_failure_title">Command Failed</string>
	<string name="command_failure_message">A recent %1$s command failed:</string>
	<string name="bluetooth_not_enabled">Bluetooth must be enabled to scan for devices.</string>
	<string name="bluetooth_unavailable_title">Bluetooth unavailable</string>
	<string name="bluetooth_unavailable_message">This phone does not have an available bluetooth device.</string>
	<string name="new_device_added">Device added successfully!</string>
	<string name="device_pair_fail_title">Device pairing failed.</string>
	<string name="device_pair_fail_message">An error occurred while pairing to the device.</string>
	<string name="pairing_progress_title">Pairing to device…</string>
	<string name="pairing_progress_message">Attempting to pair to device.  Please wait.</string>
	<string name="scanning">Scanning for new devices…</string>
	<string name="pair_confirm_title">Pair to device</string>
	<string name="pair_confirm_message">Pair to device %1$s?</string>
	<string name="pairing_refresh">Refresh list.</string>
	<string name="name_device_title">Name Device</string>
	<string name="name_device_message">Enter a name for the device if you wish.</string>
</resources>
