<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_Title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/auth_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/auth_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/auth_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/auth_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/auth_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSignInPressed"
        android:text="@string/button_signIn" />

    <Button
        android:id="@+id/auth_new_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCreateNewAccountPressed"
        android:text="@string/button_createNewAccount" />

</LinearLayout>
